Practicas/P4/y.output
Estado 89 conflictos: 1 desplazamiento(s)/reducción(ones)


Gramática

    0 $accept: programa $end

    1 $@1: /* vacío */

    2 programa: $@1 cabecera_programa bloque

    3 cabecera_programa: MAIN

    4 $@2: /* vacío */

    5 $@3: /* vacío */

    6 bloque: INICIO $@2 declar_de_variables_locales $@3 declar_de_subprogs sentencias FINBLO

    7 declar_de_subprogs: declar_de_subprogs declar_subprog
    8                   | /* vacío */

    9 $@4: /* vacío */

   10 declar_subprog: cabecera_subprograma $@4 bloque

   11 $@5: /* vacío */

   12 cabecera_subprograma: PROCED IDENTIFICADOR PARIZ $@5 declar_parametros PARDER

   13 $@6: /* vacío */

   14 cabecera_subprograma: PROCED IDENTIFICADOR PARIZ $@6 PARDER

   15 $@7: /* vacío */

   16 declar_parametros: declar_parametros COMA TIPOSIMPLE $@7 iden

   17 $@8: /* vacío */

   18 declar_parametros: TIPOSIMPLE $@8 iden
   19                  | error

   20 iden: IDENTIFICADOR
   21     | IDENTIFICADOR CORIZ expresion CORDER
   22     | IDENTIFICADOR CORIZ expresion COMA expresion CORDER

   23 declar_de_variables_locales: INICIOV variables_locales FINV
   24                            | /* vacío */

   25 variables_locales: variables_locales cuerpo_decla_variables
   26                  | cuerpo_decla_variables
   27                  | error

   28 $@9: /* vacío */

   29 $@10: /* vacío */

   30 cuerpo_decla_variables: TIPOSIMPLE $@9 lista_variables $@10 PYC

   31 lista_variables: lista_variables COMA iden
   32                | iden
   33                | error

   34 sentencias: sentencias sentencia
   35           | sentencia

   36 sentencia: bloque
   37          | sentencia_asignacion
   38          | sentencia_if
   39          | sentencia_while
   40          | sentencia_entrada
   41          | sentencia_salida
   42          | procedimiento
   43          | sentencia_case
   44          | error

   45 $@11: /* vacío */

   46 sentencia_asignacion: iden $@11 ASIG expresion PYC

   47 expresion: PARIZ expresion PARDER
   48          | OPB_ADD expresion
   49          | expresion OPB_OR expresion
   50          | expresion OPB_AND expresion
   51          | expresion OPB_IG expresion
   52          | expresion OPB_REL expresion
   53          | expresion OPB_ADD expresion
   54          | expresion OPB_MUL expresion
   55          | OPU expresion
   56          | iden
   57          | CONSTANTE
   58          | CONSTANTE_E
   59          | CARACTER
   60          | agregados
   61          | error

   62 $@12: /* vacío */

   63 $@13: /* vacío */

   64 procedimiento: IDENTIFICADOR PARIZ $@12 lista_expresiones PARDER $@13 PYC

   65 $@14: /* vacío */

   66 procedimiento: IDENTIFICADOR PARIZ PARDER $@14 PYC

   67 agregados: INICIO lista_expresiones FINBLO

   68 lista_expresiones: lista_expresiones COMA expresion
   69                  | expresion

   70 sentencia_if: alternativa_doble
   71             | alternativa_simple

   72 alternativa_simple: IF expresion sentencia

   73 alternativa_doble: IF expresion sentencia ELSE sentencia

   74 sentencia_while: WHILE PARIZ expresion PARDER sentencia

   75 sentencia_entrada: READ lista_variables PYC

   76 sentencia_salida: WRITE lista_expresiones_o_cadena PYC

   77 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion_o_cadena
   78                           | expresion_o_cadena

   79 expresion_o_cadena: expresion
   80                   | CADENA

   81 sentencia_case: SWITCH PARIZ IDENTIFICADOR PARDER INICIO casos caso_por_defecto FINBLO

   82 casos: casos CASE opcion DOSP sentencias BREAK PYC
   83      | /* vacío */

   84 opcion: CONSTANTE_E
   85       | CARACTER

   86 caso_por_defecto: DEFAULT DOSP sentencias
   87                 | /* vacío */


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 19 27 33 44 61
MAIN (258) 3
INICIO (259) 6 67 81
FINBLO (260) 6 67 81
INICIOV (261) 23
FINV (262) 23
PYC (263) 30 46 64 66 75 76 82
COMA (264) 16 22 31 68 77
TIPOSIMPLE (265) 16 18 30
PROCED (266) 12 14
CORIZ (267) 21 22
CORDER (268) 21 22
IF (269) 72 73
ELSE (270) 73
WHILE (271) 74
READ (272) 75
WRITE (273) 76
SWITCH (274) 81
CASE (275) 82
DEFAULT (276) 86
DOSP (277) 82 86
BREAK (278) 82
CONSTANTE (279) 57
PARDER (280) 12 14 47 64 66 74 81
PARIZ (281) 12 14 47 64 66 74 81
CADENA (282) 80
IDENTIFICADOR (283) 12 14 20 21 22 64 66 81
CONSTANTE_E (284) 58 84
CARACTER (285) 59 85
ASIG (286) 46
OPB_OR (287) 49
OPB_AND (288) 50
OPB_IG (289) 51
OPB_REL (290) 52
OPB_ADD (291) 48 53
OPB_MUL (292) 54
OPU (293) 55


No terminales con las reglas donde aparecen

$accept (39)
    en la izquierda: 0
programa (40)
    en la izquierda: 2, en la derecha: 0
$@1 (41)
    en la izquierda: 1, en la derecha: 2
cabecera_programa (42)
    en la izquierda: 3, en la derecha: 2
bloque (43)
    en la izquierda: 6, en la derecha: 2 10 36
$@2 (44)
    en la izquierda: 4, en la derecha: 6
$@3 (45)
    en la izquierda: 5, en la derecha: 6
declar_de_subprogs (46)
    en la izquierda: 7 8, en la derecha: 6 7
declar_subprog (47)
    en la izquierda: 10, en la derecha: 7
$@4 (48)
    en la izquierda: 9, en la derecha: 10
cabecera_subprograma (49)
    en la izquierda: 12 14, en la derecha: 10
$@5 (50)
    en la izquierda: 11, en la derecha: 12
$@6 (51)
    en la izquierda: 13, en la derecha: 14
declar_parametros (52)
    en la izquierda: 16 18 19, en la derecha: 12 16
$@7 (53)
    en la izquierda: 15, en la derecha: 16
$@8 (54)
    en la izquierda: 17, en la derecha: 18
iden (55)
    en la izquierda: 20 21 22, en la derecha: 16 18 31 32 46 56
declar_de_variables_locales (56)
    en la izquierda: 23 24, en la derecha: 6
variables_locales (57)
    en la izquierda: 25 26 27, en la derecha: 23 25
cuerpo_decla_variables (58)
    en la izquierda: 30, en la derecha: 25 26
$@9 (59)
    en la izquierda: 28, en la derecha: 30
$@10 (60)
    en la izquierda: 29, en la derecha: 30
lista_variables (61)
    en la izquierda: 31 32 33, en la derecha: 30 31 75
sentencias (62)
    en la izquierda: 34 35, en la derecha: 6 34 82 86
sentencia (63)
    en la izquierda: 36 37 38 39 40 41 42 43 44, en la derecha: 34
    35 72 73 74
sentencia_asignacion (64)
    en la izquierda: 46, en la derecha: 37
$@11 (65)
    en la izquierda: 45, en la derecha: 46
expresion (66)
    en la izquierda: 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61,
    en la derecha: 21 22 46 47 48 49 50 51 52 53 54 55 68 69 72 73
    74 79
procedimiento (67)
    en la izquierda: 64 66, en la derecha: 42
$@12 (68)
    en la izquierda: 62, en la derecha: 64
$@13 (69)
    en la izquierda: 63, en la derecha: 64
$@14 (70)
    en la izquierda: 65, en la derecha: 66
agregados (71)
    en la izquierda: 67, en la derecha: 60
lista_expresiones (72)
    en la izquierda: 68 69, en la derecha: 64 67 68
sentencia_if (73)
    en la izquierda: 70 71, en la derecha: 38
alternativa_simple (74)
    en la izquierda: 72, en la derecha: 71
alternativa_doble (75)
    en la izquierda: 73, en la derecha: 70
sentencia_while (76)
    en la izquierda: 74, en la derecha: 39
sentencia_entrada (77)
    en la izquierda: 75, en la derecha: 40
sentencia_salida (78)
    en la izquierda: 76, en la derecha: 41
lista_expresiones_o_cadena (79)
    en la izquierda: 77 78, en la derecha: 76 77
expresion_o_cadena (80)
    en la izquierda: 79 80, en la derecha: 77 78
sentencia_case (81)
    en la izquierda: 81, en la derecha: 43
casos (82)
    en la izquierda: 82 83, en la derecha: 81 82
opcion (83)
    en la izquierda: 84 85, en la derecha: 82
caso_por_defecto (84)
    en la izquierda: 86 87, en la derecha: 81


estado 0

    0 $accept: . programa $end

    $default  reduce usando la regla 1 ($@1)

    programa  ir al estado 1
    $@1       ir al estado 2


estado 1

    0 $accept: programa . $end

    $end  desplazar e ir al estado 3


estado 2

    2 programa: $@1 . cabecera_programa bloque

    MAIN  desplazar e ir al estado 4

    cabecera_programa  ir al estado 5


estado 3

    0 $accept: programa $end .

    $default  aceptar


estado 4

    3 cabecera_programa: MAIN .

    $default  reduce usando la regla 3 (cabecera_programa)


estado 5

    2 programa: $@1 cabecera_programa . bloque

    INICIO  desplazar e ir al estado 6

    bloque  ir al estado 7


estado 6

    6 bloque: INICIO . $@2 declar_de_variables_locales $@3 declar_de_subprogs sentencias FINBLO

    $default  reduce usando la regla 4 ($@2)

    $@2  ir al estado 8


estado 7

    2 programa: $@1 cabecera_programa bloque .

    $default  reduce usando la regla 2 (programa)


estado 8

    6 bloque: INICIO $@2 . declar_de_variables_locales $@3 declar_de_subprogs sentencias FINBLO

    INICIOV  desplazar e ir al estado 9

    $default  reduce usando la regla 24 (declar_de_variables_locales)

    declar_de_variables_locales  ir al estado 10


estado 9

   23 declar_de_variables_locales: INICIOV . variables_locales FINV

    error       desplazar e ir al estado 11
    TIPOSIMPLE  desplazar e ir al estado 12

    variables_locales       ir al estado 13
    cuerpo_decla_variables  ir al estado 14


estado 10

    6 bloque: INICIO $@2 declar_de_variables_locales . $@3 declar_de_subprogs sentencias FINBLO

    $default  reduce usando la regla 5 ($@3)

    $@3  ir al estado 15


estado 11

   27 variables_locales: error .

    $default  reduce usando la regla 27 (variables_locales)


estado 12

   30 cuerpo_decla_variables: TIPOSIMPLE . $@9 lista_variables $@10 PYC

    $default  reduce usando la regla 28 ($@9)

    $@9  ir al estado 16


estado 13

   23 declar_de_variables_locales: INICIOV variables_locales . FINV
   25 variables_locales: variables_locales . cuerpo_decla_variables

    FINV        desplazar e ir al estado 17
    TIPOSIMPLE  desplazar e ir al estado 12

    cuerpo_decla_variables  ir al estado 18


estado 14

   26 variables_locales: cuerpo_decla_variables .

    $default  reduce usando la regla 26 (variables_locales)


estado 15

    6 bloque: INICIO $@2 declar_de_variables_locales $@3 . declar_de_subprogs sentencias FINBLO

    $default  reduce usando la regla 8 (declar_de_subprogs)

    declar_de_subprogs  ir al estado 19


estado 16

   30 cuerpo_decla_variables: TIPOSIMPLE $@9 . lista_variables $@10 PYC

    error          desplazar e ir al estado 20
    IDENTIFICADOR  desplazar e ir al estado 21

    iden             ir al estado 22
    lista_variables  ir al estado 23


estado 17

   23 declar_de_variables_locales: INICIOV variables_locales FINV .

    $default  reduce usando la regla 23 (declar_de_variables_locales)


estado 18

   25 variables_locales: variables_locales cuerpo_decla_variables .

    $default  reduce usando la regla 25 (variables_locales)


estado 19

    6 bloque: INICIO $@2 declar_de_variables_locales $@3 declar_de_subprogs . sentencias FINBLO
    7 declar_de_subprogs: declar_de_subprogs . declar_subprog

    error          desplazar e ir al estado 24
    INICIO         desplazar e ir al estado 6
    PROCED         desplazar e ir al estado 25
    IF             desplazar e ir al estado 26
    WHILE          desplazar e ir al estado 27
    READ           desplazar e ir al estado 28
    WRITE          desplazar e ir al estado 29
    SWITCH         desplazar e ir al estado 30
    IDENTIFICADOR  desplazar e ir al estado 31

    bloque                ir al estado 32
    declar_subprog        ir al estado 33
    cabecera_subprograma  ir al estado 34
    iden                  ir al estado 35
    sentencias            ir al estado 36
    sentencia             ir al estado 37
    sentencia_asignacion  ir al estado 38
    procedimiento         ir al estado 39
    sentencia_if          ir al estado 40
    alternativa_simple    ir al estado 41
    alternativa_doble     ir al estado 42
    sentencia_while       ir al estado 43
    sentencia_entrada     ir al estado 44
    sentencia_salida      ir al estado 45
    sentencia_case        ir al estado 46


estado 20

   33 lista_variables: error .

    $default  reduce usando la regla 33 (lista_variables)


estado 21

   20 iden: IDENTIFICADOR .
   21     | IDENTIFICADOR . CORIZ expresion CORDER
   22     | IDENTIFICADOR . CORIZ expresion COMA expresion CORDER

    CORIZ  desplazar e ir al estado 47

    $default  reduce usando la regla 20 (iden)


estado 22

   32 lista_variables: iden .

    $default  reduce usando la regla 32 (lista_variables)


estado 23

   30 cuerpo_decla_variables: TIPOSIMPLE $@9 lista_variables . $@10 PYC
   31 lista_variables: lista_variables . COMA iden

    COMA  desplazar e ir al estado 48

    $default  reduce usando la regla 29 ($@10)

    $@10  ir al estado 49


estado 24

   44 sentencia: error .

    $default  reduce usando la regla 44 (sentencia)


estado 25

   12 cabecera_subprograma: PROCED . IDENTIFICADOR PARIZ $@5 declar_parametros PARDER
   14                     | PROCED . IDENTIFICADOR PARIZ $@6 PARDER

    IDENTIFICADOR  desplazar e ir al estado 50


estado 26

   72 alternativa_simple: IF . expresion sentencia
   73 alternativa_doble: IF . expresion sentencia ELSE sentencia

    error          desplazar e ir al estado 51
    INICIO         desplazar e ir al estado 52
    CONSTANTE      desplazar e ir al estado 53
    PARIZ          desplazar e ir al estado 54
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 55
    CARACTER       desplazar e ir al estado 56
    OPB_ADD        desplazar e ir al estado 57
    OPU            desplazar e ir al estado 58

    iden       ir al estado 59
    expresion  ir al estado 60
    agregados  ir al estado 61


estado 27

   74 sentencia_while: WHILE . PARIZ expresion PARDER sentencia

    PARIZ  desplazar e ir al estado 62


estado 28

   75 sentencia_entrada: READ . lista_variables PYC

    error          desplazar e ir al estado 20
    IDENTIFICADOR  desplazar e ir al estado 21

    iden             ir al estado 22
    lista_variables  ir al estado 63


estado 29

   76 sentencia_salida: WRITE . lista_expresiones_o_cadena PYC

    error          desplazar e ir al estado 51
    INICIO         desplazar e ir al estado 52
    CONSTANTE      desplazar e ir al estado 53
    PARIZ          desplazar e ir al estado 54
    CADENA         desplazar e ir al estado 64
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 55
    CARACTER       desplazar e ir al estado 56
    OPB_ADD        desplazar e ir al estado 57
    OPU            desplazar e ir al estado 58

    iden                        ir al estado 59
    expresion                   ir al estado 65
    agregados                   ir al estado 61
    lista_expresiones_o_cadena  ir al estado 66
    expresion_o_cadena          ir al estado 67


estado 30

   81 sentencia_case: SWITCH . PARIZ IDENTIFICADOR PARDER INICIO casos caso_por_defecto FINBLO

    PARIZ  desplazar e ir al estado 68


estado 31

   20 iden: IDENTIFICADOR .
   21     | IDENTIFICADOR . CORIZ expresion CORDER
   22     | IDENTIFICADOR . CORIZ expresion COMA expresion CORDER
   64 procedimiento: IDENTIFICADOR . PARIZ $@12 lista_expresiones PARDER $@13 PYC
   66              | IDENTIFICADOR . PARIZ PARDER $@14 PYC

    CORIZ  desplazar e ir al estado 47
    PARIZ  desplazar e ir al estado 69

    $default  reduce usando la regla 20 (iden)


estado 32

   36 sentencia: bloque .

    $default  reduce usando la regla 36 (sentencia)


estado 33

    7 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce usando la regla 7 (declar_de_subprogs)


estado 34

   10 declar_subprog: cabecera_subprograma . $@4 bloque

    $default  reduce usando la regla 9 ($@4)

    $@4  ir al estado 70


estado 35

   46 sentencia_asignacion: iden . $@11 ASIG expresion PYC

    $default  reduce usando la regla 45 ($@11)

    $@11  ir al estado 71


estado 36

    6 bloque: INICIO $@2 declar_de_variables_locales $@3 declar_de_subprogs sentencias . FINBLO
   34 sentencias: sentencias . sentencia

    error          desplazar e ir al estado 24
    INICIO         desplazar e ir al estado 6
    FINBLO         desplazar e ir al estado 72
    IF             desplazar e ir al estado 26
    WHILE          desplazar e ir al estado 27
    READ           desplazar e ir al estado 28
    WRITE          desplazar e ir al estado 29
    SWITCH         desplazar e ir al estado 30
    IDENTIFICADOR  desplazar e ir al estado 31

    bloque                ir al estado 32
    iden                  ir al estado 35
    sentencia             ir al estado 73
    sentencia_asignacion  ir al estado 38
    procedimiento         ir al estado 39
    sentencia_if          ir al estado 40
    alternativa_simple    ir al estado 41
    alternativa_doble     ir al estado 42
    sentencia_while       ir al estado 43
    sentencia_entrada     ir al estado 44
    sentencia_salida      ir al estado 45
    sentencia_case        ir al estado 46


estado 37

   35 sentencias: sentencia .

    $default  reduce usando la regla 35 (sentencias)


estado 38

   37 sentencia: sentencia_asignacion .

    $default  reduce usando la regla 37 (sentencia)


estado 39

   42 sentencia: procedimiento .

    $default  reduce usando la regla 42 (sentencia)


estado 40

   38 sentencia: sentencia_if .

    $default  reduce usando la regla 38 (sentencia)


estado 41

   71 sentencia_if: alternativa_simple .

    $default  reduce usando la regla 71 (sentencia_if)


estado 42

   70 sentencia_if: alternativa_doble .

    $default  reduce usando la regla 70 (sentencia_if)


estado 43

   39 sentencia: sentencia_while .

    $default  reduce usando la regla 39 (sentencia)


estado 44

   40 sentencia: sentencia_entrada .

    $default  reduce usando la regla 40 (sentencia)


estado 45

   41 sentencia: sentencia_salida .

    $default  reduce usando la regla 41 (sentencia)


estado 46

   43 sentencia: sentencia_case .

    $default  reduce usando la regla 43 (sentencia)


estado 47

   21 iden: IDENTIFICADOR CORIZ . expresion CORDER
   22     | IDENTIFICADOR CORIZ . expresion COMA expresion CORDER

    error          desplazar e ir al estado 51
    INICIO         desplazar e ir al estado 52
    CONSTANTE      desplazar e ir al estado 53
    PARIZ          desplazar e ir al estado 54
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 55
    CARACTER       desplazar e ir al estado 56
    OPB_ADD        desplazar e ir al estado 57
    OPU            desplazar e ir al estado 58

    iden       ir al estado 59
    expresion  ir al estado 74
    agregados  ir al estado 61


estado 48

   31 lista_variables: lista_variables COMA . iden

    IDENTIFICADOR  desplazar e ir al estado 21

    iden  ir al estado 75


estado 49

   30 cuerpo_decla_variables: TIPOSIMPLE $@9 lista_variables $@10 . PYC

    PYC  desplazar e ir al estado 76


estado 50

   12 cabecera_subprograma: PROCED IDENTIFICADOR . PARIZ $@5 declar_parametros PARDER
   14                     | PROCED IDENTIFICADOR . PARIZ $@6 PARDER

    PARIZ  desplazar e ir al estado 77


estado 51

   61 expresion: error .

    $default  reduce usando la regla 61 (expresion)


estado 52

   67 agregados: INICIO . lista_expresiones FINBLO

    error          desplazar e ir al estado 51
    INICIO         desplazar e ir al estado 52
    CONSTANTE      desplazar e ir al estado 53
    PARIZ          desplazar e ir al estado 54
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 55
    CARACTER       desplazar e ir al estado 56
    OPB_ADD        desplazar e ir al estado 57
    OPU            desplazar e ir al estado 58

    iden               ir al estado 59
    expresion          ir al estado 78
    agregados          ir al estado 61
    lista_expresiones  ir al estado 79


estado 53

   57 expresion: CONSTANTE .

    $default  reduce usando la regla 57 (expresion)


estado 54

   47 expresion: PARIZ . expresion PARDER

    error          desplazar e ir al estado 51
    INICIO         desplazar e ir al estado 52
    CONSTANTE      desplazar e ir al estado 53
    PARIZ          desplazar e ir al estado 54
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 55
    CARACTER       desplazar e ir al estado 56
    OPB_ADD        desplazar e ir al estado 57
    OPU            desplazar e ir al estado 58

    iden       ir al estado 59
    expresion  ir al estado 80
    agregados  ir al estado 61


estado 55

   58 expresion: CONSTANTE_E .

    $default  reduce usando la regla 58 (expresion)


estado 56

   59 expresion: CARACTER .

    $default  reduce usando la regla 59 (expresion)


estado 57

   48 expresion: OPB_ADD . expresion

    error          desplazar e ir al estado 51
    INICIO         desplazar e ir al estado 52
    CONSTANTE      desplazar e ir al estado 53
    PARIZ          desplazar e ir al estado 54
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 55
    CARACTER       desplazar e ir al estado 56
    OPB_ADD        desplazar e ir al estado 57
    OPU            desplazar e ir al estado 58

    iden       ir al estado 59
    expresion  ir al estado 81
    agregados  ir al estado 61


estado 58

   55 expresion: OPU . expresion

    error          desplazar e ir al estado 51
    INICIO         desplazar e ir al estado 52
    CONSTANTE      desplazar e ir al estado 53
    PARIZ          desplazar e ir al estado 54
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 55
    CARACTER       desplazar e ir al estado 56
    OPB_ADD        desplazar e ir al estado 57
    OPU            desplazar e ir al estado 58

    iden       ir al estado 59
    expresion  ir al estado 82
    agregados  ir al estado 61


estado 59

   56 expresion: iden .

    $default  reduce usando la regla 56 (expresion)


estado 60

   49 expresion: expresion . OPB_OR expresion
   50          | expresion . OPB_AND expresion
   51          | expresion . OPB_IG expresion
   52          | expresion . OPB_REL expresion
   53          | expresion . OPB_ADD expresion
   54          | expresion . OPB_MUL expresion
   72 alternativa_simple: IF expresion . sentencia
   73 alternativa_doble: IF expresion . sentencia ELSE sentencia

    error          desplazar e ir al estado 24
    INICIO         desplazar e ir al estado 6
    IF             desplazar e ir al estado 26
    WHILE          desplazar e ir al estado 27
    READ           desplazar e ir al estado 28
    WRITE          desplazar e ir al estado 29
    SWITCH         desplazar e ir al estado 30
    IDENTIFICADOR  desplazar e ir al estado 31
    OPB_OR         desplazar e ir al estado 83
    OPB_AND        desplazar e ir al estado 84
    OPB_IG         desplazar e ir al estado 85
    OPB_REL        desplazar e ir al estado 86
    OPB_ADD        desplazar e ir al estado 87
    OPB_MUL        desplazar e ir al estado 88

    bloque                ir al estado 32
    iden                  ir al estado 35
    sentencia             ir al estado 89
    sentencia_asignacion  ir al estado 38
    procedimiento         ir al estado 39
    sentencia_if          ir al estado 40
    alternativa_simple    ir al estado 41
    alternativa_doble     ir al estado 42
    sentencia_while       ir al estado 43
    sentencia_entrada     ir al estado 44
    sentencia_salida      ir al estado 45
    sentencia_case        ir al estado 46


estado 61

   60 expresion: agregados .

    $default  reduce usando la regla 60 (expresion)


estado 62

   74 sentencia_while: WHILE PARIZ . expresion PARDER sentencia

    error          desplazar e ir al estado 51
    INICIO         desplazar e ir al estado 52
    CONSTANTE      desplazar e ir al estado 53
    PARIZ          desplazar e ir al estado 54
    IDENTIFICADOR  desplazar e ir al estado 21
    CONSTANTE_E    desplazar e ir al estado 55
    CARACTER       desplazar e ir al estado 56
    OPB_ADD        desplazar e ir al estado 57
    OPU            desplazar e ir al estado 58

    iden       ir al estado 59
    expresion  ir al estado 90
    agregados  ir al estado 61


estado 63

   31 lista_variables: lista_variables . COMA iden
   75 sentencia_entrada: READ lista_variables . PYC

    PYC   desplazar e ir al estado 91
    COMA  desplazar e ir al estado 48


estado 64

   80 expresion_o_cadena: CADENA .

    $default  reduce usando la regla 80 (expresion_o_cadena)


estado 65

   49 expresion: expresion . OPB_OR expresion
   50          | expresion . OPB_AND expresion
   51          | expresion . OPB_IG expresion
   52          | expresion . OPB_REL expresion
   53          | expresion . OPB_ADD expresion
   54          | expresion . OPB_MUL expresion
   79 expresion_o_cadena: expresion .

    OPB_OR   desplazar e ir al estado 83
    OPB_AND  desplazar e ir al estado 84
    OPB_IG   desplazar e ir al estado 85
    OPB_REL  desplazar e ir al estado 86
    OPB_ADD  desplazar e ir al estado 87
    OPB_MUL  desplazar e ir al estado 88

    $default  reduce usando la regla 79 (expresion_o_cadena)


estado 66
